[package]
edition = "2021"
name = "rust_rouglike"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rt"
path = "src/main.rs"
[lib]
name = "tutorial"
path = "src/lib/mod.rs"
[dependencies]
getrandom = {version = "0.2", features = ["js"]}
rltk = "0.8.0"
specs = "0.16.1"
specs-derive = "0.4.1"
