[package]
edition = "2021"
name = "rust_rouglike"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "rt"
path = "src/main.rs"
[lib]
name = "tutorial"
path = "src/lib/mod.rs"


[dependencies]
rltk = { version = "0.8.0", features = ["serde"] }
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4.1"
serde= { version = "^1.0.44", features = ["derive"] }
serde_json = "^1.0.44"
